--- a/vignettes/example-1.Rmd
+++ b/vignettes/example-1.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Example 1. Combining two independent ratings."
+title: "Defining a branch for a column and extracting the branched values."
 output: rmarkdown::html_vignette
 csl: american-statistical-association.csl
 vignette: >
-  %\VignetteIndexEntry{Example 1. Combining two independent ratings.}
+  %\VignetteIndexEntry{Defining a branch for a column and extracting the branched values.}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 references:
@@ -153,37 +153,24 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(mverse)
 ```
 
+In this example, we demonstrate `mverse` makes it easy to define multiple definitions for a column in a dataset and compare the results of the different definitions. For the demonstration, we combine soccer player skin colour ratings by two independent raters (`rater1` and `rater2`) from `soccer` dataset included in the library. 
 
-The library comes preloaded with
-a dataset, `soccer`, from [@datasrc] 
-on card counts per each pair between 
-2,053 soccer players and 3,147 referees.
-Below are the first few lines of the dataset. 
-`knitr::kable` is used for a better display of the dataset.
+## Introduction
+
+The data comes from @datasrc and contains `r format(nrow(soccer), big.mark = ",")` rows of player-referee pairs. For each player, two independent raters coded their skin tones on a 5-point scale ranging from _very light skin_ (`0.0`) to _very dark skin_ (`1.0`). For the purpose of demonstration, we only use a unique record per player and consider only those with both ratings.
 
 ```{r load, message=FALSE}
 library(mverse)
-knitr::kable(head(soccer))
+df <- soccer[!is.na(soccer$rater1) & !is.na(soccer$rater2), 
+             c('playerShort', 'rater1', 'rater2')]
+df <- unique(df)
+head(df)
 ```
 
-The dataset was used to study whether
-racial bias played a role when referees
-issued the cards. For each player,
-two independent raters coded their skin tones
-on a 5-point scale ranging 
-from _very light skin_ (`0.0`)
-to _very dark skin_ (`1.0`) 
-with _neither dark nor light skin_(`0.5`)
-as the centre value. 
-
-
-We would like to study the distribution
-of the player skin tones but the two independent 
-rating do not always match. 
-To combine the two ratings, you may consider
-the following options:
+We would like to study the distribution of the player skin tones but the two independent rating do not always match. To combine the two ratings, we may choose to consider the following options:
 
 1.  the mean numeric value
 2.  the darker rating of the two
@@ -191,35 +178,21 @@ the following options:
 4.  the first rating only
 5.  the second rating only
 
-For the purpose of the example, we will only consider those with both ratings.
+## Without the `mverse` library
 
-```{r}
-soccer <- soccer[!is.na(soccer$rater1) & !is.na(soccer$rater2), ] 
-```
-
-## 1. Without the `mverse` library.
-
-Let's first consider how you might 
-study the five options using base R.  
-First, we define the five options
-as separate variables in R.
+Let's first consider how you might study the five options using base R. First, we define the five options as separate variables in R.
 
 ```{r base_r}
-skin_option_1 <- (                
-  soccer$rater1 + soccer$rater2) / 2 
-skin_option_2 <- ifelse(          
-  soccer$rater1 > soccer$rater2, 
-  soccer$rater1, soccer$rater2)
-skin_option_3 <- ifelse(          
-  soccer$rater1 < soccer$rater2, 
-  soccer$rater1, soccer$rater2)
-skin_option_4 <- soccer$rater1    
-skin_option_5 <- soccer$rater2    
+skin_option_1 <- (df$rater1 + df$rater2) / 2 
+skin_option_2 <- ifelse(df$rater1 > df$rater2, df$rater1, df$rater2)
+skin_option_3 <- ifelse(df$rater1 < df$rater2, df$rater1, df$rater2)
+skin_option_4 <- df$rater1    
+skin_option_5 <- df$rater2    
 ```
 
-We can plot a histogram to study the distribution of the resulting skin tone value from the first option. We will use the `ggplot2` library for plotting.
+We can plot a histogram to study the distribution of the resulting skin tone value for each option. Below is the histogram for the first option (`skin_option_1`).
 
-```{r hist_base, fig.caption="Histogram of skin tones values based on the first option", fig.width=5, fig.height=4, warning=FALSE}
+```{r hist_base}
 library(ggplot2)
 ggplot(mapping=aes(x = skin_option_1)) +
   geom_histogram(breaks = seq(0,1,0.2),
@@ -229,54 +202,56 @@ ggplot(mapping=aes(x = skin_option_1)) +
 ```
 
 
-Now, for the remaining four options,
-we will have to repeat the step above to examine the distributions.
+For the remaining four options, we can repeat the step above to examine the distributions, or create a new data frame combining all five options to use in a ggplot as shown below. In both cases, users need to take care of plotting all five manually.
 
-### Exercise.
-
-1.  Plot histograms for the remaining four options in base R.
-How would you display the five plots together?
-2.  How would you perform the same analysis 
-using the `tidyverse` package?
-
-
-## 2. Basic Branching using `mverse`.
-
-We will now learn how we can
-create the options using the `mverse` package.
-We first consider the first two options.
-
-1.  the mean numeric value
-2.  the darker rating of the two
-
-First, we define a `mverse` object with the dataset. Note that `mverse` assumes a single dataset for analysis.
-
-
-```{r create_mv}
-mv <- create_multiverse(soccer)
+```{r hist_base_overlaid}
+skin_option_all <- data.frame(
+  x = c(skin_option_1, skin_option_2, skin_option_3, skin_option_4, skin_option_5),
+  Option = rep(c(
+    'Option 1: Mean', 'Option 2: Max', 'Option 3: Min', 
+    'Option 4: Rater 1', 'Option 5: Rater 2'), each = nrow(df)
+    )
+  )
+ggplot(data = skin_option_all) +
+  geom_histogram(aes(x = x), binwidth = 0.1) +
+  labs(title = 'Histogram of player skin tones for each option.',
+       x = 'Skin Tone', y = 'Count') +
+  facet_wrap(. ~ Option)
 ```
 
-In `mverse` package, a _branch_ refers to a decision point in data analysis where you may consider more than one option. For example, a mutate branch - analogous to `mutate` method in `tidyverse`'s data manipulation grammar, lets you define a set of options for defining a new column in you dataset. 
 
-You can create a mutate branch with the function `mutate_branch`. The syntax for defining the options inside `mutate_branch` follows the `tidyverse`'s grammar as well. 
+## Branching using `mverse`
+
+We now turn to `mverse` to create the five options above. First, we define a `mverse` object with the dataset. Note that `mverse` assumes a single dataset for each multiverse analysis.
+
+```{r create_mv}
+mv <- create_multiverse(df)
+```
+
+In `mverse` package, a _branch_ refers to a decision point in data analysis where you may consider more than one _option_. For example, a mutate branch - analogous to `mutate` method in `tidyverse`'s data manipulation grammar, lets you define a set of options for defining a new column in your dataset. 
+
+You can create a mutate branch with `mutate_branch()`. The syntax for defining the options inside `mutate_branch()` follows the `tidyverse`'s grammar as well. 
 
 ```{r mutate_branch}
 skin_tone <- mutate_branch(
   (rater1 + rater2)/2,
-  ifelse(rater1 > rater2, rater1, rater2)
+  ifelse(rater1 > rater2, rater1, rater2),
+  ifelse(rater1 < rater2, rater1, rater2),
+  rater1,
+  rater2
 )
 ```
 
-You can then add the newly defined mutate branch to the `mv` object using `add_mutate_branch`. 
+You can then add the newly defined mutate branch to the `mv` object using `add_mutate_branch()`. 
 
 ```{r add_vb}
 mv <- mv %>%
   add_mutate_branch(skin_tone)
 ```
 
-Adding a branch to a `mverse` object multiplies the number of environments defined inside the object so that the environments capture all unique analysis paths. Without any branches, a `mverse` object has a single environment. We call these environments _universes_. For example, adding the `skin_tone` mutate branch to `mv` results in $1 \times 2 =2$  universes inside `mv`. In each universe, the analysis dataset now has a new column named `skin_tone` -  the name of the mutate branch object. 
+Adding a branch to a `mverse` object multiplies the number of environments defined inside the object so that the environments capture all unique analysis paths. Without any branches, a `mverse` object has a single environment. We call these environments _universes_. For example, adding the `skin_tone` mutate branch to `mv` results in $1 \times 5 = 5$  universes inside `mv`. In each universe, the analysis dataset now has a new column named `skin_tone` -  the name of the mutate branch object. 
 
-You can check that the mutate branch was added with `summary` method for the `mverse` object. The method prints a _multiverse table_ that lists all universes with branches as columns and corresponding options as values defined in the `mverse` object.
+You can check that the mutate branch was added with `summary()` method for the `mv` object. The method prints a _multiverse table_ that lists all universes with branches as columns and corresponding options as values defined in the `mv` object.
 
 ```{r check_multiverse}
 summary(mv)
@@ -288,17 +263,9 @@ At this point, the values of the new column `skin_tone` are only populated in th
 execute_multiverse(mv)
 ```
 
-### Exercise.
+## Comparing between universes
 
-1.  Revise the code above to add a mutate branch with all five options.
-2.  Print the multiverse table. How many _universes_ does your multiverse produce?
-
-## 3. Comparing between Universes.
-
-In this section, we now examine and compare the distributions of
-`skin_tone` values between different options. 
-
-You can extract the values from the analysis dataset in each universe using `extract` method. By default, the method returns the columns created by a mutate branch across all universes.
+In this section, we now examine and compare the distributions of `skin_tone` values between different options. You can extract the values in each universe using `extract()`. By default, the method returns all columns created by a mutate branch across all universes. In this example, we only have one column - `skin_tone`.
 
 ```{r extract_multiverse}
 branched <- extract(mv)
@@ -310,7 +277,7 @@ branched <- extract(mv)
 head(branched)
 ```
 
-...as well as the second universe.
+...as well as the last universe.
 
 ```{r tail_skin_tone}
 tail(branched)
@@ -318,21 +285,21 @@ tail(branched)
 
 The method provides various options to select a subset of data as well. These are useful when the multiverse is too large and examining the whole multiverse is inefficient.
 
-Setting `universe=2` extracts values from the second universe only. Checking the unique `universe` values in the returned dataset shows that the dataset indeed only consists of values from the second universe. 
+Setting `universe = 2` extracts values from the second universe only. Checking the unique `universe` values in the returned dataset shows that the dataset indeed only consists of values from the second universe. 
 
 ```{r ununi}
 branched_2 <- extract(mv, universe = 2)
 unique(branched_2$universe)
 ```
 
-Setting `universe=c(1,2)` extracts values from both first and second universes.
+Setting `universe = c(1,2)` extracts values from both first and second universes.
 
 ```{r ununi_1_2}
 branched_1_2 <- extract(mv, universe = c(1,2))
 unique(branched_1_2$universe)
 ```
 
-`frow` provides the option to extract a random subset of the values in each universe. It takes a value between 0 and 1 that represent the fraction of values to extract from each universe. For example, setting `frow=0.05` returns approximately 5\% of values from each universe.
+`frow` provides the option to extract a random subset of rows in each universe. It takes a value between 0 and 1 that represent the fraction of values to extract from each universe. For example, setting `frow = 0.05` returns approximately 5\% of values from each universe.
 
 ```{r extract_fraction}
 frac <- extract(mv, frow =  0.05)
@@ -344,50 +311,51 @@ frac <- extract(mv, frow =  0.05)
 sum(frac$universe == 1)/sum(branched$universe == 1)
 ```
 
-...plus approximately 5\% of the second universe.
+...plus approximately 5\% of the second universe...
 
 ```{r check_frac_2}
 sum(frac$universe == 2)/sum(branched$universe == 2)
 ```
 
-Using the extracted data, you can construct plots to compare
-the distributions of `skin_tone` in different universes. For example,
-you can overlay density lines on a single plot.
+...and so on.
 
-```{r compare_universe, fig.caption="Density lines overlaid on a single plot.", fig.width=5, fig.height=4, warning=FALSE}
+```{r check_frac_all}
+sum(frac$universe == 3)/sum(branched$universe == 3)
+sum(frac$universe == 4)/sum(branched$universe == 4)
+sum(frac$universe == 5)/sum(branched$universe == 5)
+```
+
+Finally, we can construct plots to compare the distributions of `skin_tone` in different universes. For example, you can overlay density lines on a single plot.
+
+```{r compare_universe, warning=FALSE}
 branched %>%
   ggplot(mapping = aes(x = skin_tone, color = universe)) +
   geom_density(alpha = 0.2) +
-  xlab('Skin Tone') +
-  ylab('Density') +
-  ggtitle('Density of player skin tones.')
+  labs(title = 'Density of player skin tones for each option.',
+       x = 'Skin Tone', y = 'Density') +
+  scale_color_discrete(labels = c(
+    'Option 1: Mean', 'Option 2: Max', 'Option 3: Min', 
+    'Option 4: Rater 1', 'Option 5: Rater 2'),
+    name = NULL
+  )
 ```
 
-Another option is the use `ggplot`'s `facet_grid` function 
-to generate multiple plots in a grid. `facet_grid(. ~ universe)` generates
-individual plots for each universe.
+Another option is the use `ggplot`'s `facet_grid` function to generate multiple plots in a grid. `facet_wrap(. ~ universe)` generates individual plots for each universe.
 
-```{r compare_universe_hist, fig.caption="Histograms on a facet grid.", fig.width=5, fig.height=4, warning=FALSE}
+```{r compare_universe_hist, warning=FALSE}
 branched %>%
-  ggplot(mapping = aes(x = skin_tone, fill = universe)) +
+  ggplot(mapping = aes(x = skin_tone)) +
   geom_histogram(position = 'dodge', bins = 21) +
-  labs(title = 'Histogram of player skin tones.',
+  labs(title = 'Histogram of player skin tones for each option.',
        y = 'Count', x='Skin Tone') + 
-  facet_grid(. ~ universe) 
+  facet_wrap(
+    . ~ universe, 
+    labeller = labeller(univrse = c(
+    'Option 1: Mean', 'Option 2: Max', 'Option 3: Min', 
+    'Option 4: Rater 1', 'Option 5: Rater 2'))
+  ) 
 ```
 
-### Exercise.
-
-1.  In `extract` method, `nuni` sets the number of universes to extract from. The subset of the universes to extract from are randomly selected. Call `extract` method for the full multiverse with all 5 options using `nuni=3` multiple time. Check that there are 3 universes included in the extracted dataset each time. 
-2.  Use `geom_boxplot` to compare the distributions between 
-the five options.
-3.  Construct a grid of histograms for all the five options. 
-Use `universe ~ .` instead of `. ~ universe` in `facet_grid`. 
-
-## Discussion.
-
-1.  The five options each result in different distributions. Does one option provide a more _objective_ rating than others?
-2.  Among the three types of plots - density plot, histogram, and boxplot, which plot do you find the most effective at comparing different distributions? 
 
 
 ## References
