remove csl file; undo removing as-is:true for hurricane vignette

--- a/vignettes/hurricane.Rmd
+++ b/vignettes/hurricane.Rmd
@@ -5,6 +5,8 @@ output:
     base_format: rmarkdown::html_vignette
     number_sections: false
 link-citations: yes
+pkgdown:
+  as_is: true
 vignette: >
   %\VignetteIndexEntry{Does naming a hurricane as a female cause more deaths?}
   %\VignetteEncoding{UTF-8}
