--- a/vignettes/regression.Rmd
+++ b/vignettes/regression.Rmd
@@ -52,8 +52,9 @@ This vignette describes the workflow of linear regression modeling in the multiv
 We will use the Boston housing dataset {@boston} as an example. This dataset has 506 observations on 14 variables. This dataset is extensively used in regression analyses and algorithm benchmarks. The objective is to predict the median value of a home (`medv`) with the feature variables.
 
 
-```{r load}
+```{r load, warning=FALSE, message=FALSE}
 library(MASS)
+library(tidyverse)
 library(mverse)
 knitr::kable(head(Boston)) # using kable for displaying data in html
 ```
