--- a/vignettes/example-1.Rmd
+++ b/vignettes/example-1.Rmd
@@ -148,11 +148,12 @@ references:
       family: Nosek
 ---
 
-```{r setup, include = FALSE}
+```{r setup, include = FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(tidyverse)
 library(mverse)
 ```
 
